{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 16,
  "lineage": "7e4fca7e-0883-17e7-c37c-06057ec815c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-022d5a7787ff0966d",
            "domain": "vpc",
            "id": "eipalloc-0e9566ba5a1297d48",
            "instance": "i-0e8e2f50495966dac",
            "network_interface": "eni-06861529f8e157135",
            "private_dns": "ip-10-0-1-254.eu-central-1.compute.internal",
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-18-159-69-243.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.69.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_internet_gateway.test_vpc_gateway",
            "aws_key_pair.goran_public_key",
            "aws_security_group.allow_all",
            "aws_subnet.test_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c960b947cbb2dd16",
            "arn": "arn:aws:ec2:eu-central-1:009326428394:instance/i-0e8e2f50495966dac",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8e2f50495966dac",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06861529f8e157135",
            "private_dns": "ip-10-0-1-254.eu-central-1.compute.internal",
            "private_ip": "10.0.1.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-059e402e7319b5ed2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd939b073a53c9ab",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e426d0ab04628621"
            ]
          },
          "dependencies": [
            "aws_key_pair.goran_public_key",
            "aws_security_group.allow_all",
            "aws_subnet.test_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_vpc_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:009326428394:internet-gateway/igw-07af49f5c231e8888",
            "id": "igw-07af49f5c231e8888",
            "owner_id": "009326428394",
            "vpc_id": "vpc-0d67be2ec9f85ffbc"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "allowall",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:009326428394:network-acl/acl-088e8c0fb6f75dac9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-088e8c0fb6f75dac9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "009326428394",
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-0d67be2ec9f85ffbc"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-028ca77aa1bd17e84",
            "owner_id": "009326428394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07af49f5c231e8888",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d67be2ec9f85ffbc"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_gateway",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c918ac684159043",
            "route_table_id": "rtb-028ca77aa1bd17e84",
            "subnet_id": "subnet-0bd939b073a53c9ab"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_gateway",
            "aws_route_table.default_gateway",
            "aws_subnet.test_subnet",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:009326428394:security-group/sg-0e426d0ab04628621",
            "description": "Allow all  traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e426d0ab04628621",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "009326428394",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d67be2ec9f85ffbc"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:009326428394:subnet/subnet-0bd939b073a53c9ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bd939b073a53c9ab",
            "map_public_ip_on_launch": false,
            "owner_id": "009326428394",
            "vpc_id": "vpc-0d67be2ec9f85ffbc"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:009326428394:vpc/vpc-0d67be2ec9f85ffbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013423806afc66456",
            "default_route_table_id": "rtb-0e8ded29ba79f286c",
            "default_security_group_id": "sg-07510f7e05a7145de",
            "dhcp_options_id": "dopt-ca4ae5a0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d67be2ec9f85ffbc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e8ded29ba79f286c",
            "owner_id": "009326428394",
            "tags": {
              "Name": "test_cidr_block"
            }
          }
        }
      ]
    }
  ]
}